## Process this file with automake to produce Makefile.in

ALL_SUBDIRS = 	 \
    include	 \
    src	         \
    backend      \
    plugin       \
    metadata	 \
    config

SUBDIRS = $(ALL_SUBDIRS)

EXTRA_DIST =            \
    libcompizconfig.pc.in

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = libcompizconfig.pc
