## Process this file with automake to produce Makefile.in
SUBDIRS = \
    animation      \
    colorfilter    \
    expo           \
    jpeg           \
    kdecompat      \
    mag            \
    neg            \
    opacify        \
    put            \
    resizeinfo     \
    ring           \
    scaleaddon     \
    session        \
    shift          \
    snap           \
    text           \
    thumbnail      \
    titleinfo      \
    vpswitch       \
    wall           \
    winrules       \
    workarounds
