## Process this file with automake to produce Makefile.in
SUBDIRS = \
    animation      \
    colorfilter    \
    kdecompat      \
    opacify        \
    put            \
    resizeinfo     \
    ring           \
    scaleaddon     \
    session        \
    shift          \
    snap           \
    text           \
    thumbnail      \
    titleinfo      \
    vpswitch       \
    winrules       \
    workarounds
